src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>AOT_Amount__c</fullName>
        <description>The Amount Over Threshold for the program.</description>
        <label>AOT Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Always_Require_PG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Always require PG for this Program.</description>
        <label>Always Require PG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analytics_Body_Block__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Analytics - Body Block</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Head_Block__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Area for google analytics code</inlineHelpText>
        <label>Analytics - Head Block</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Send_BOCA_to_Siebel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Send BOCA to Siebel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Card_Controls__c</fullName>
        <label>Available Card Controls</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Products</fullName>
                </value>
                <value>
                    <fullName>Custom Controls</fullName>
                </value>
                <value>
                    <fullName>Fuel and Auto</fullName>
                </value>
                <value>
                    <fullName>Fuel and Oil &amp; Fluids</fullName>
                </value>
                <value>
                    <fullName>Fuel Only</fullName>
                </value>
                <value>
                    <fullName>No Restrictions</fullName>
                </value>
                <value>
                    <fullName>Fuel and Oil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOCA_Application_Status_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Status Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOCA_Disclaimer__c</fullName>
        <label>BOCA Disclaimer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA_Default_Disclaimer</fullName>
                    <default>true</default>
                    <label>BOCA_Default_Disclaimer</label>
                </value>
                <value>
                    <fullName>BOCA_Revolver_Disclaimer</fullName>
                </value>
                <value>
                    <fullName>BOCA_GETT_Disclosure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOCA_Form_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://&apos; + $Label.External_Instance_URL + &apos;/creditapplication/&apos; + TEXT(Form_Template__c) + &apos;?pgm=&apos; + Brand_Short_Name__c, &quot;BOCA Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOCA Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOCA_Main_Form_Filename__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Main Form Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOCA_Resume_Application_URL__c</fullName>
        <description>URL used in emails to BOCA applicants directing to the resume application login page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resume Application Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOCA_Sell_Sheet__c</fullName>
        <description>Sell sheets for BOCA</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sell sheets for BOCA</inlineHelpText>
        <label>BOCA Sell Sheet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOCA_To_Prospect_Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BOCA To Prospect Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOCA_Type__c</fullName>
        <label>BOCA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fuel Card</fullName>
                    <default>true</default>
                    <label>Fuel Card</label>
                </value>
                <value>
                    <fullName>Revolver Card</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
                <value>
                    <fullName>CPBOCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPAV_Form_Header_Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPAV Form Header Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPAV_Form_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://&apos; + $Label.External_Instance_URL + &apos;/CustomerConversion/CustomerConversion?pgm=&apos; + Brand_Short_Name__c, &quot;BPAV Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPAV Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_CSS_Overrides__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of a static resource that is used to override styles (i.e. Divvy, etc)</inlineHelpText>
        <label>Brand CSS Overrides</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Color_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a hexadecimal color value in the format: #ffffff  or copy and paste css gradient code from the color picker button here.</inlineHelpText>
        <label>Brand Color 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Color_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a hexadecimal color value in the format: #ffffff  or copy and paste css gradient code from the color picker button here.</inlineHelpText>
        <label>Brand Color 2</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Folder_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Folder Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Heading__c</fullName>
        <description>Branded heading for the program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Heading</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Long_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Long Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Short_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This value is used to determine which brand/program is associated with the BOCA.  It is passed in via the url (example would be &apos;?pgm=wex&apos;)</inlineHelpText>
        <label>Brand Short Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand_Tagline__c</fullName>
        <description>Branded tagline for the program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Tagline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Order_Type__c</fullName>
        <label>Card Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Press_ID__c</fullName>
        <label>Card Press ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Shipping_Method__c</fullName>
        <label>Card Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Style__c</fullName>
        <label>Card Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>139</fullName>
                </value>
                <value>
                    <fullName>159</fullName>
                </value>
                <value>
                    <fullName>182</fullName>
                </value>
                <value>
                    <fullName>198</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>201</fullName>
                </value>
                <value>
                    <fullName>202</fullName>
                </value>
                <value>
                    <fullName>203</fullName>
                </value>
                <value>
                    <fullName>204</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
                <value>
                    <fullName>206</fullName>
                </value>
                <value>
                    <fullName>207</fullName>
                </value>
                <value>
                    <fullName>208</fullName>
                </value>
                <value>
                    <fullName>209</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>211</fullName>
                </value>
                <value>
                    <fullName>212</fullName>
                </value>
                <value>
                    <fullName>215</fullName>
                </value>
                <value>
                    <fullName>216</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ExxonMobil Saipan</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil Guam</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil Singapore</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Area for confirmation page related text, urls, etc.</inlineHelpText>
        <label>Confirmation Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Consumer_Application_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For ESSO Only!</description>
        <inlineHelpText>For ESSO Only!</inlineHelpText>
        <label>Consumer Application Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conversion_Fax_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Fax Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Form_Style_Overrides__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Form Style Overrides</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Key__c</fullName>
        <description>DO NOT CHANGE ONCE SET</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>CASE(Name , &apos;GU Fleet Card&apos;, &apos;Guam&apos;,
             &apos;SP Fleet Card&apos;, &apos;Saipan&apos;,
             &apos;SG Fleet Card&apos;, &apos;Singapore&apos;,
             &apos;HK Fleet Card&apos;, &apos;Hong Kong&apos;,
             &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Department_Phone_Number__c</fullName>
        <description>Phone number of the credit department for this program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Department Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Email_Header_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URL to wexhosted for this program&apos;s email header</inlineHelpText>
        <label>Custom Email Header URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DID_Length__c</fullName>
        <defaultValue>TEXT(4)</defaultValue>
        <label>DID Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <default>true</default>
                    <label>4</label>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>4 OR 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_Line_Of_Business_Indicator__c</fullName>
        <inlineHelpText>Determines the model used by DNB for adjudication. Indicators: FLT = NA Fleet, OTR = OTR, MCD = Corporate Payments, CAN = Canada</inlineHelpText>
        <label>DNB Line Of Business Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FLT</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
                <value>
                    <fullName>MCD</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Instant_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Instant Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Delete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do Not Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_From_Name__c</fullName>
        <description>Name used in from field of emails sent to BOCA applicants.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email From Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Reply_To_Address__c</fullName>
        <description>Email reply to address used in email notifications to BOCA applicants.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Reply To Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Data_Capture_Email_Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fleet Data Capture Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Data_Capture_Form_Delivery__c</fullName>
        <label>Fleet Card Delivery Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5-7</fullName>
                </value>
                <value>
                    <fullName>2-3</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_Enrollment_Disable_Driver_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the display of the driver information page.</description>
        <inlineHelpText>Disables the display of the driver information page.</inlineHelpText>
        <label>Disable Driver Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Enrollment_Enable_Fuel_Oil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Fuel and Oil Card Control Options On The Form</description>
        <inlineHelpText>Enable Fuel and Oil Card Control Options On The Form</inlineHelpText>
        <label>Enable Fuel And Oil Card Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Enrollment_Enable_Prompt_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables prompt options on the vehicle page for the Fleet Enrollment form</description>
        <inlineHelpText>Enables prompt options on the vehicle page for the Fleet Enrollment form</inlineHelpText>
        <label>Enable Prompt Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Enrollment_Enable_Universal_PL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Universal/Private label selection on the Embossing page.</description>
        <inlineHelpText>Enables Universal/Private label selection on the Embossing page.</inlineHelpText>
        <label>Enable Universal/Private Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Template__c</fullName>
        <label>Form Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditApp_Revolver</fullName>
                </value>
                <value>
                    <fullName>WexBOCA</fullName>
                </value>
                <value>
                    <fullName>OTRBOCA</fullName>
                </value>
                <value>
                    <fullName>wexU</fullName>
                </value>
                <value>
                    <fullName>WexBOCA2</fullName>
                </value>
                <value>
                    <fullName>CPBOCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Team_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Team Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Phone_Number__c</fullName>
        <description>Phone number of inside sales for the program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inside Sales Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Group__c</fullName>
        <label>Issuer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issuer_ID__c</fullName>
        <label>Issuer ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100000</fullName>
                </value>
                <value>
                    <fullName>105757</fullName>
                </value>
                <value>
                    <fullName>113301</fullName>
                </value>
                <value>
                    <fullName>118897</fullName>
                </value>
                <value>
                    <fullName>140187</fullName>
                </value>
                <value>
                    <fullName>141905</fullName>
                </value>
                <value>
                    <fullName>143039</fullName>
                </value>
                <value>
                    <fullName>144496</fullName>
                </value>
                <value>
                    <fullName>151674</fullName>
                </value>
                <value>
                    <fullName>155189</fullName>
                </value>
                <value>
                    <fullName>189984</fullName>
                </value>
                <value>
                    <fullName>194133</fullName>
                </value>
                <value>
                    <fullName>194134</fullName>
                </value>
                <value>
                    <fullName>194135</fullName>
                </value>
                <value>
                    <fullName>194136</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Late_Fee_Percentage__c</fullName>
        <description>EMAP Late Fee Percentage</description>
        <label>Late Fee Percentage</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Payer_Days__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The Invoice Paid In Full On date needs to be &gt;= Payment Due Date + Late Payer Days</description>
        <label>Late Payer Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Person_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Area for liver person code</inlineHelpText>
        <label>Live Person Code</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logo_Image_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logo Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>